# bloodmoon

./: .gitignore  README.md  filtering.py  package-lock.json  package.json  pyproject.toml  repomix-output.txt  test_filters.py
bloodmoon/: __init__.py  coords.py  filtering.py  images.py  io.py  mask.py  optim.py  types.py  utils.py
demo/examples/: 01_residuals.py  02_plotiros.py
iros/: coords.py  images.py  io.py  mask.py  optim.py  types.py  utils.py
iros/assets/: __init__.py
notebooks/: example_ccreconstruction.ipynb  loop.py  optimizer.py  optimizer_call.py  optimizer_vignetting.py  optimizer_vignetting_reconstructed.py  shadowgram.ipynb  subtraction.ipynb  subtraction_.ipynb
scripts/: iros.py
tests/: test_aliasing.py  test_array_sampling.py  test_bisect.py  test_equatorial2shift.py  test_equatorial_shift_coords.py  test_erosion.py  test_filters.py  test_image_composition.py  test_mask_camera.py  test_optimizer.py  test_pos2equatorial.py  test_pos2shift.py  test_pos_equatorial.py  test_pos_shifts.py  test_rbilinear.py  test_rbilinear_relative.py  test_shadowgrams.py  test_shift2pos.py  test_unframe.py
