[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bloodmoon"
description = "A library for analyzing data and simulations from the WFM coded mask instrument."
keywords = ["astrophysics", "coded masks"]
version = "0.0.1"
authors = [
    { name="Giuseppe Dilillo", email="peppedilillo@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pyinstrument",
    "black",
    "isort",
    "ipython",
    "jupyter",
]

